# push_swap

./: CMakeLists.txt  Makefile  README.md  afaire.txt  debug.txt  out.txt  out_geof.txt  push_swap  rand.sh  ressources.txt  test  test.txt
NULL/: NULLimproved_algo_big_stack .c  Null_algo_big_stack.c  push_swap.c
checker/: checker  checker.c
includes/: push_swap.h
includes/libft/: libft.h
libft/: Makefile  libft.h
libft/file/: ft_putstr_fd.c
libft/lst/: ft_lstdelone.c
libft/strs/: char2dup.c  free_char2.c
project/: Makefile  push_swap
project/includes/: push_swap.h
project/libft/: Makefile  libft.h
project/libft/nbr/: ft_atol.c
project/libft/others/: ft_issign.c
project/libft/str/: ft_split.c
project/libft/strs/: char2dup.c  char2len.c  ft_putchar2_endl.c
project/srcs/checker/: checker.c
project/srcs/init/: extract_args.c
project/srcs/sorting_algos/: big_algo_moves.c  sorting_algos.c
project/srcs/stack_operations/: manage_operations.c  manage_operations2.c  (+1 more)
src/: algo_big_stack.c  checker.c  create_stack.c  main.c  process_args.c  push_swap.c  push_swap.h  stack.c  stack_operations.c  stack_utils.c
srcs/: algo_big_stack.c  create_stack.c  main.c  manage_errors.c  manage_operations.c  manage_stelem.c  misc.c  operations.c  process_args.c  push_swap.c  sorting_algo.c  stack_init.c  stack_operations.c  stack_utils.c  stack_utils2.c
srcs/closing/: closing.c
srcs/init/: stack_init.c
srcs/sorting_algos/: big_algo_targets.c
srcs/stack_operations/: manage_operations2.c  operations.c
srcs/utils/: stack_utils.c  stack_utils2.c
(+1 files in other folders)
